# eu-us-forms-migration

./: .env  .env.example  .gitignore  Cargo.toml  README.md  down.sh  error.md  output.txt  up.sh
dump/dev2-good-form-template/: trial-2707ce73-793a-4734-9060-08ad41f68ad5.bson  trial-2707ce73-793a-4734-9060-08ad41f68ad5.metadata.json
src/: lib.rs  main.rs
