[package]
name = "eu-us-forms-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
termion = "*"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]

[dependencies.async-std]
features = ["attributes"]